...
    "new_habit_duration_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "How long do you want this habit to be?"
          }
        }
      }
    },
    "new_habit_location_section_title" : {
      "extractionState" : "manual",
...
    "new_habit_name_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What habit do you want to start?"
          }
        }
      }
    },
    "new_habit_resume_button" : {
      "extractionState" : "manual",
...
